--- a/src/sample/card.fxml
+++ b/src/sample/card.fxml
@@ -10,11 +10,11 @@
 <StackPane xmlns="http://javafx.com/javafx"
            xmlns:fx="http://javafx.com/fxml"
            fx:controller="sample.CardController"
-           prefHeight="400.0" prefWidth="600.0" styleClass="card-style">
-    <stylesheets>
-        <String fx:value="./styles.css"/>
-    </stylesheets>
-    <ImageView>
+           prefHeight="100.0" prefWidth="100.0" styleClass="card-style">
+    <ImageView fx:id="outerImage" styleClass="outer-image" fitWidth="100" fitHeight="100">
+
+    </ImageView>
+    <ImageView fx:id="innerImage" styleClass="inner-image" fitWidth="80" fitHeight="80">
 
     </ImageView>
 
