--- a/src/sample/memeri.fxml
+++ b/src/sample/memeri.fxml
@@ -1,18 +1,13 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import java.lang.String?>
-<AnchorPane fx:controller="sample.MemeriController"
-            xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml" >
-    <stylesheets>
-        <String fx:value="./styles.css"/>
-    </stylesheets>
-    <GridPane fx:id="grid" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-    </GridPane>
-    <Button fx:id="startButton" onAction="#startMemeri" />
-</AnchorPane>
+<StackPane prefHeight="225.0" prefWidth="265.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MemeriController">
+    <VBox alignment="CENTER" spacing="50.0" StackPane.alignment="CENTER">
+        <GridPane fx:id="grid" alignment="CENTER" hgap="30" vgap="30" />
+        <Button fx:id="startButton" onAction="#startMemeri" />
+    </VBox>
+</StackPane>
